--- a/mywebsite.html
+++ b/mywebsite.html
@@ -2,5 +2,6 @@
 <html>
 <body>
       <h1>welcome to government polytechnic karkala</h1>
+      <p>dept of computer science &engg</p>
 </body>
 </html>
